--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,6 +12,10 @@
   <body>
     <div id="root">
       grox
+      <br/>
+      gorx
+      <br/>
+      groxenhimer
     </div>
     <script src="js/react.production.min.js"></script>
     <script src="js/react-dom.production.min.js"></script>
